--- a/01-intro/homework.ipynb
+++ b/01-intro/homework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "f6008398-10be-4d4d-a814-d1c3fe9370e5",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "bcdd06aa-c5bf-4b8b-a809-aea02d98c8d8",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "f4ad312e-0c3f-436f-907a-b47b10d79dcf",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
        "[9704 rows x 11 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,11 +274,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "fc0ce363-8449-499e-a272-255f8ad963db",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of records in the data set:  9704\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question # 1\n",
+    "print(f\"Number of records in the data set: \", df.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9386a567-eaab-42ef-8748-b1a0b989ad32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of fuel types in the data set:  2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Q2: Fuel types\n",
+    "print(f\"Number of fuel types in the data set: \", df.fuel_type.nunique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "06489c8f-5907-4795-8c8b-b45138e63a82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Q3: Fuel types\n",
+    "print(f\"Number of fuel types in the data set: \", df.fuel_type.nunique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b95abef-926b-4413-a07c-3e1de02628ac",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Q4: Missing values\n",
+    "print(f\"The number of columns with missing values are: \", 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "62b6c1b9-1784-4f03-ba8f-ff189ef8d0e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "engine_displacement      0\n",
+       "num_cylinders          482\n",
+       "horsepower             708\n",
+       "vehicle_weight           0\n",
+       "acceleration           930\n",
+       "model_year               0\n",
+       "origin                   0\n",
+       "fuel_type                0\n",
+       "drivetrain               0\n",
+       "num_doors              502\n",
+       "fuel_efficiency_mpg      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
   }
  ],
  "metadata": {
