--- a/01-intro/Introduction to numpy.ipynb
+++ b/01-intro/Introduction to numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "001de8fc",
    "metadata": {
     "vscode": {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "78596e9f-e9f6-46eb-bbaf-042a4202ec54",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
        "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "136f1bfc-5edb-481a-bbc2-87206f14c761",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
        "array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1.])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b42f88f0-05b7-4dbb-a994-1069b7ac7c33",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
        "array([2.5, 2.5, 2.5, 2.5, 2.5, 2.5, 2.5, 2.5, 2.5, 2.5])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "5c6f99f5-b0f3-4f3f-ade9-a47e4e4dc51b",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "52dd8796-aa4a-42cd-87a9-09116500bd74",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "d7f87a22-ae43-4779-a48b-542e7724ae32",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "bff9749a-2c6b-48d8-90a4-8eab8382bbd5",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
        "array([0.  , 0.25, 0.5 , 0.75, 1.  ])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "5eab5444-ed80-436a-8fe8-580f605697ca",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
        "       [0., 0.]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "98c7b24e-0cff-4b93-a3b9-8c4ba16d541b",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "id": "c9313234-c608-48e7-97e8-cdac3bcf0cf5",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
        "np.int64(3)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "d8418cd2-f596-4971-8708-2c2104bdfce5",
    "metadata": {},
    "outputs": [
@@ -246,7 +246,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "93ec5fbf-5f98-4741-b8ac-8c93db09f10b",
    "metadata": {},
    "outputs": [],
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "id": "8aa1dd17-daec-4ae6-ba88-db2b03067248",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
        "array([1, 1, 1])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "id": "baae0369-a88b-41d0-b201-6b9a6e0d274a",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
        "array([2, 5, 1])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "id": "37c8a6cd-d7fd-4107-9448-630d227364ac",
    "metadata": {},
    "outputs": [],
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "id": "a7345113-e0cb-4149-bcfb-e62227384ec0",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
        "       [1, 1, 2]])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "id": "931a0071-cd5d-4fd6-ab00-2a1d128f1636",
    "metadata": {},
    "outputs": [
@@ -364,7 +364,7 @@
        "       [0.29965467, 0.26682728]])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "id": "5122e47f-38f2-4aec-be10-e201c42310e0",
    "metadata": {},
    "outputs": [
@@ -390,7 +390,7 @@
        "       [-1.05795222, -0.90900761]])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "id": "c2778d57-831a-41d9-8915-1dc0e81bee2e",
    "metadata": {},
    "outputs": [
@@ -417,7 +417,7 @@
        "       [34, 49]])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "id": "15108d80-542a-4307-82b2-28f7ebc79def",
    "metadata": {},
    "outputs": [
@@ -448,7 +448,7 @@
        "array([0, 1, 2, 3, 4])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "id": "500d61e1-e2d5-4159-81f7-b677b16fea47",
    "metadata": {},
    "outputs": [
@@ -470,7 +470,7 @@
        "array([10, 12, 14, 16, 18])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "id": "43481668-f2a5-465c-9684-ef9a996b9afa",
    "metadata": {},
    "outputs": [],
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 25,
    "id": "112d0d94-24db-4406-bbde-0c915a880286",
    "metadata": {},
    "outputs": [
@@ -501,7 +501,7 @@
        "array([1.  , 2.44, 3.96, 5.56, 7.24])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,28 +511,96 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "0eedca68-1047-4c03-8dd6-0f4575aa823f",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Comparison operations"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "25eba78a-6295-401c-81d5-6a269d2018d3",
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "81662abc-2712-4e00-b38b-625d4b28c7f5",
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
+   "id": "42ccd0cb-aaa9-4c29-9ab2-f3940788994f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.  , 1.44, 1.96, 2.56, 3.24])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "25eba78a-6295-401c-81d5-6a269d2018d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False,  True,  True,  True])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a >= 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "1ff30428-d687-418d-bbf6-bfa7135f60e9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False,  True,  True,  True])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a > b"
+   ]
   },
   {
    "cell_type": "code",
@@ -540,20 +608,85 @@
    "id": "0fd7a90f-c0b5-4715-80fb-0e3d7f6edcc3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a[a>b]"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73350d2e-5424-4902-8adf-19a6f6559328",
+   "cell_type": "markdown",
+   "id": "fcc22581-4767-49e0-b6ca-fc09de8dc245",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Summarizing operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "527cb21d-3306-4900-9beb-2888e1db2860",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(10)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "8e69d8db-aade-4f18-be8d-2ec3a013025b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(2.0)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "91232802-cb12-44c9-899f-6b35e446dd68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(1.4142135623730951)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.std()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "851559f4-8569-449c-b8fb-fced57f3def2",
+   "id": "8fb8a4e8-dbb9-4e70-81ec-8a24f50439d3",
    "metadata": {},
    "outputs": [],
    "source": []
