--- a/01-intro/homework.ipynb
+++ b/01-intro/homework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f6008398-10be-4d4d-a814-d1c3fe9370e5",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "bcdd06aa-c5bf-4b8b-a809-aea02d98c8d8",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f4ad312e-0c3f-436f-907a-b47b10d79dcf",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
        "[9704 rows x 11 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,19 +312,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "06489c8f-5907-4795-8c8b-b45138e63a82",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of fuel types in the data set:  2\n"
+     ]
     }
    ],
    "source": [
@@ -334,10 +331,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "7b95abef-926b-4413-a07c-3e1de02628ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of columns with missing values are:  4\n"
+     ]
+    }
+   ],
    "source": [
     "# Q4: Missing values\n",
     "print(f\"The number of columns with missing values are: \", 4)"
@@ -345,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "62b6c1b9-1784-4f03-ba8f-ff189ef8d0e9",
    "metadata": {},
    "outputs": [
@@ -366,13 +371,357 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c910ae7f-8e40-419a-8bf7-2f4d7a903b68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>engine_displacement</th>\n",
+       "      <th>num_cylinders</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>vehicle_weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>fuel_type</th>\n",
+       "      <th>drivetrain</th>\n",
+       "      <th>num_doors</th>\n",
+       "      <th>fuel_efficiency_mpg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>170</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>159.0</td>\n",
+       "      <td>3413.433759</td>\n",
+       "      <td>17.7</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Gasoline</td>\n",
+       "      <td>All-wheel drive</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13.231729</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>130</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>3149.664934</td>\n",
+       "      <td>17.8</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Gasoline</td>\n",
+       "      <td>Front-wheel drive</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13.688217</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>170</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>3079.038997</td>\n",
+       "      <td>15.1</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Gasoline</td>\n",
+       "      <td>Front-wheel drive</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14.246341</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>220</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2542.392402</td>\n",
+       "      <td>20.2</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>All-wheel drive</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>16.912736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>210</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>3460.870990</td>\n",
+       "      <td>14.4</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Gasoline</td>\n",
+       "      <td>All-wheel drive</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>12.488369</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9699</th>\n",
+       "      <td>140</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>164.0</td>\n",
+       "      <td>2981.107371</td>\n",
+       "      <td>17.3</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>Front-wheel drive</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>15.101802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9700</th>\n",
+       "      <td>180</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>154.0</td>\n",
+       "      <td>2439.525729</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Gasoline</td>\n",
+       "      <td>All-wheel drive</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>17.962326</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9701</th>\n",
+       "      <td>220</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>138.0</td>\n",
+       "      <td>2583.471318</td>\n",
+       "      <td>15.1</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>All-wheel drive</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>17.186587</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9702</th>\n",
+       "      <td>230</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>177.0</td>\n",
+       "      <td>2905.527390</td>\n",
+       "      <td>19.4</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>Front-wheel drive</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>15.331551</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9703</th>\n",
+       "      <td>270</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>2908.043477</td>\n",
+       "      <td>14.7</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>All-wheel drive</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>14.884467</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9704 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      engine_displacement  num_cylinders  horsepower  vehicle_weight  \\\n",
+       "0                     170            3.0       159.0     3413.433759   \n",
+       "1                     130            5.0        97.0     3149.664934   \n",
+       "2                     170            NaN        78.0     3079.038997   \n",
+       "3                     220            4.0         NaN     2542.392402   \n",
+       "4                     210            1.0       140.0     3460.870990   \n",
+       "...                   ...            ...         ...             ...   \n",
+       "9699                  140            5.0       164.0     2981.107371   \n",
+       "9700                  180            NaN       154.0     2439.525729   \n",
+       "9701                  220            2.0       138.0     2583.471318   \n",
+       "9702                  230            4.0       177.0     2905.527390   \n",
+       "9703                  270            3.0       140.0     2908.043477   \n",
+       "\n",
+       "      acceleration  model_year  origin fuel_type         drivetrain  \\\n",
+       "0             17.7        2003  Europe  Gasoline    All-wheel drive   \n",
+       "1             17.8        2007     USA  Gasoline  Front-wheel drive   \n",
+       "2             15.1        2018  Europe  Gasoline  Front-wheel drive   \n",
+       "3             20.2        2009     USA    Diesel    All-wheel drive   \n",
+       "4             14.4        2009  Europe  Gasoline    All-wheel drive   \n",
+       "...            ...         ...     ...       ...                ...   \n",
+       "9699          17.3        2013  Europe    Diesel  Front-wheel drive   \n",
+       "9700          15.0        2004     USA  Gasoline    All-wheel drive   \n",
+       "9701          15.1        2008     USA    Diesel    All-wheel drive   \n",
+       "9702          19.4        2011     USA    Diesel  Front-wheel drive   \n",
+       "9703          14.7        2005    Asia    Diesel    All-wheel drive   \n",
+       "\n",
+       "      num_doors  fuel_efficiency_mpg  \n",
+       "0           0.0            13.231729  \n",
+       "1           0.0            13.688217  \n",
+       "2           0.0            14.246341  \n",
+       "3           2.0            16.912736  \n",
+       "4           2.0            12.488369  \n",
+       "...         ...                  ...  \n",
+       "9699        NaN            15.101802  \n",
+       "9700        0.0            17.962326  \n",
+       "9701       -1.0            17.186587  \n",
+       "9702        1.0            15.331551  \n",
+       "9703       -1.0            14.884467  \n",
+       "\n",
+       "[9704 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f028dc68-4518-443c-9394-f528ddfcb941",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(23.76)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Q5: What's the maximum fuel efficiency of cars from Asia?\n",
+    "df_asia = df[df['origin'] == 'Asia']\n",
+    "df_asia.fuel_efficiency_mpg.max().round(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "2571625f-8b90-411c-9436-be704e6b69e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The median is: 149.0\n",
+      "The mode is: 0    152.0\n",
+      "Name: horsepower, dtype: float64\n",
+      "The median is: 152.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Q6:\n",
+    "# Find the median value of the horsepower column in the dataset.\n",
+    "print(f\"The median is:\", df.horsepower.median())\n",
+    "# Next, calculate the most frequent value of the same horsepower column.\n",
+    "print(f\"The mode is:\", df.horsepower.mode())\n",
+    "# Use the fillna method to fill the missing values in the horsepower column with the most frequent value from the previous step.\n",
+    "df['horsepower'] = df['horsepower'].fillna(152)\n",
+    "# Now, calculate the median value of horsepower once again.\n",
+    "print(f\"The median is:\", df.horsepower.median())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "ab5a6a34-9f03-4014-9da7-e8886afdf7c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.5187709081074016)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Q7: sum of weights\n",
+    "import numpy as np\n",
+    "# Select all the cars from Asia\n",
+    "df_asia.head(10)\n",
+    "# Select only columns vehicle_weight and model_year\n",
+    "df_asia = df_asia[['vehicle_weight', 'model_year']]\n",
+    "# Select the first 7 values\n",
+    "df_asia = df_asia.head(7)\n",
+    "# Get the underlying NumPy array. Let's call it X.\n",
+    "x = df_asia.values\n",
+    "# Compute matrix-matrix multiplication between the transpose of X and X. To get the transpose, use X.T. Let's call the result XTX.\n",
+    "xtx = x.T.dot(x)\n",
+    "# Invert XTX.\n",
+    "xtx_inversa = np.linalg.inv(xtx)\n",
+    "# Create an array y with values [1100, 1300, 800, 900, 1000, 1100, 1200].\n",
+    "y = np.array([1100, 1300, 800, 900, 1000, 1100, 1200])\n",
+    "# Multiply the inverse of XTX with the transpose of X, and then multiply the result by y. Call the result w.\n",
+    "w = xtx_inversa.dot(x.T).dot(y)\n",
+    "# What's the sum of all the elements of the result?\n",
+    "w.sum()\n"
    ]
   }
  ],
